# the-election-game

./: README.md
.github/workflows/: deploy.yml  node.js.yml
client/: index.html  main.js  package.json  postcss.config.js
client-elm/: .gitignore  README.md  elm.json  index.html
client-elm/src/: index.html  index.js  yamb.css
client-svelte/: package-lock.json  package.json
client-svelte/src/: app.css
client-svelte/src/lib/: Button.svelte  InputField.svelte  Matching.svelte  PlayerList.svelte
client-svelte/src/lib/datatypes/: answer.ts  game.ts  guess.ts  picture.ts  player.ts  round.ts
client-svelte/src/lib/functions/: requests.ts
client-svelte/src/lib/menus/: Answer.svelte  AnswerWait.svelte  GameFooter.svelte  Guess.svelte  GuessWait.svelte  Join.svelte  Results.svelte
client-svelte/src/routes/: +page.svelte  results.svelte
client-svelte/src/routes/game/: +page.svelte
client-svelte/src/routes/guess/: +page.svelte
client-svelte/src/routes/results/: +page.svelte
client-svelte/src/routes/wait/: +page.svelte
client/src/: Main.elm  index.html  index.js
client/src/css/: styles.css
server-luke/: app.ts  index.js  package-lock.json  package.json  server.ts
server-rust/: Cargo.toml  README.md  adam-question.txt  chat_gpt_questions.txt  questions.txt
server-rust/src/: main.rs  question_lookup.rs  tests.rs  types.rs
server-rust/src/types/: traits.rs
server-svelte/: package-lock.json  package.json
server-svelte/src/: App.svelte
server-svelte/src/lib/: Button.svelte  InputField.svelte
server-svelte/src/routes/: +page.svelte
(+1 files in other folders)
